bad/add_invalid_types_null_null.example_compiler_output
ERROR
[1mbad/add_invalid_types_null_null.lat:3:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `null` and `null`[m
	null + null;
	     [1;32m^[m
